--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <script src="./src/index.ts" type="module"></script>
+  <script src="./dist/index.js" type="module"></script>
 </body>
 </html>
